# gbfr-ultrawide

./: .gitignore  AGENTS.md  CMakeLists.txt  CONTEXT.md  LICENSE  README.md  build.ps1
.github/workflows/: ci.yml  release.yml
docs/: PATTERNS.md
docs/adr/: 0001-asi-plugin-with-ultimate-asi-loader.md  0002-scan-only-committed-executable-sections.md  0003-data-layer-patches-over-hooks.md  0004-fill-width-crop-fix.md  0005-per-build-pattern-porting.md  0006-canvas-manager-invariant-fix.md  0007-span-hud-structural-gating.md  0008-fov-multiplier-at-view-params-site.md  0009-nameplate-scale-and-cross-hook-refresh.md  0010-dev-only-machinery-compiled-out-of-release.md  0011-fov-multiplier-inside-projection-builder.md  0012-crop-factor-is-shared-with-combat-vfx.md  0013-camera-distance-multiplier-via-committed-eye-writer.md  0014-fps-cap-data-patch-hook-removed.md  0015-modal-blur-backdrop-tiling-issue3.md  0016-adopt-gbfrdatatools-for-ui-identification.md  0017-tutorial-highlight-known-limitation.md
docs/agents/: domain.md
ini/: GBFRUltrawide.dev.ini  GBFRUltrawide.ini
installer/: IniFile.cs  InstalledVersion.cs  MainForm.cs  Program.cs  Strings.cs  UpdateChecker.cs  app.manifest  build_installer.ps1
redist/: README.md
src/: dllmain.cpp  helper.hpp  stdafx.h
tools/: README.md  build_tools.ps1  gbfr_analyze.cpp
